--- a/ResearchTaskHelper/Components/Pages/Counter.razor
+++ b/ResearchTaskHelper/Components/Pages/Counter.razor
@@ -1,19 +1,46 @@
 ﻿@page "/counter"
 @rendermode InteractiveServer
-
+@inject CustomerDbContext context;
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+<EditForm  OnSubmit="submit" Model="@customer">
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<InputNumber @bind-Value="customer.Id" hidden/>
+<label>First Name</label>
+<InputText @bind-Value="customer.FirstName"/>
+
+<label>Last Name</label>
+<InputText @bind-Value="customer.LastName"/>
+
+<label>Date of Birth</label>
+<InputDate @bind-Value="customer.BDay"/>
+<button type="submit">Click</button>
+<button @onclick="randomize">Randomize</button>
+
+</EditForm>
 
 @code {
-    private int currentCount = 0;
+    [SupplyParameterFromForm]
+    private Customer customer{get;set;}=new Customer();
 
-    private void IncrementCount()
+    private void click()
     {
-        currentCount++;
+        Console.WriteLine(customer.ToString());
     }
+
+    protected  void submit()
+    {
+        Console.WriteLine(customer);
+        context.Add(customer);
+        context.SaveChanges();
+
+    }
+    protected void randomize()
+    {
+        this.customer=context.CreateRandom();
+    }
+
+ 
 }
