migrations and profile pcitures

--- a/ResearchTaskHelper/Components/Pages/Weather.razor
+++ b/ResearchTaskHelper/Components/Pages/Weather.razor
@@ -27,7 +27,7 @@ else
             {
                 <tr>
                     <td> @c.Id</td>
-                    <td> @c.FirstName</td>
+                    <td><a href ="/customers/@c.Id">@c.FirstName</a> </td>
                     <td> @c.LastName</td>
                     <td> @c.BDay</td>
                 </tr>
