--- a/ResearchTaskHelper/Components/Components/PokedexEntryComponent.razor
+++ b/ResearchTaskHelper/Components/Components/PokedexEntryComponent.razor
@@ -1,9 +1,8 @@
 @using ResearchTaskLib;
-<span>@entry.PokemonName</span>
+<span>@entry.Name</span>
 <span></span>
 @foreach (var task in entry.ResearchTasks)
 {
-            Console.WriteLine(task.Type.Description);
             <p>
             <ResearchTaskEntryComponent task="@task" />
             </p>
