added evolution data to json and better formatting

--- a/ResearchTaskHelper/Components/Components/PokedexEntryComponent.razor
+++ b/ResearchTaskHelper/Components/Components/PokedexEntryComponent.razor
@@ -4,7 +4,7 @@
 @foreach (var task in entry.ResearchTasks)
 {
             <p>
-            <ResearchTaskEntryComponent task="@task" />
+            <ResearchTaskEntryComponent task="@task" entry="@entry" />
             </p>
 
  
