--- a/ResearchTaskHelper/Components/Components/ResearchTaskEntryComponent.razor
+++ b/ResearchTaskHelper/Components/Components/ResearchTaskEntryComponent.razor
@@ -6,7 +6,13 @@
 else{
     <span>&nbsp;&nbsp;</span>
 }
+@if(task.Type.CatchWithoutActuallyCatching(entry)){
+<b>@task.Type.Description</b>
+}
+else{
 <span>@task.Type.Description</span>
+}
+
 <span></span>
 <input type="number"  @bind="AmountDone"  />
 <span></span>
@@ -27,6 +33,8 @@ else
 [Parameter]
 
     public ResearchTaskEntry task{get;set;}
+    [Parameter]
+    public PokedexEntry entry{get;set;}
     public bool IsAchieved(int goal, int amountDone){
         return amountDone>=goal;
     }
