--- a/ResearchTaskHelper/Components/Layout/NavMenu.razor
+++ b/ResearchTaskHelper/Components/Layout/NavMenu.razor
@@ -25,6 +25,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <button @onclick="save">Save</button>
+        @code{
+            void save(){
+                ResearchTaskLib.ResearchData.Save();
+            }
+        }
     </nav>
 </div>
 
